--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
   - source: /plugins/themeverse/languages/
-    translation: '%language%.php'
+    translation: /plugins/themeverse/languages/%language%.php
