--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,3 @@
 files:
-  - source: /plugins/themeverse/languages/
+  - source: /plugins/themeverse/languages/english.php
     translation: /plugins/themeverse/languages/%language%.php
